# 2026-01-ai-coding

./: .gitignore  AGENTS.md  Code_Embeddings.ipynb  Decision.md  readme.md
.claude/: settings.local.json
.claude/skills/python/: SKILL.md
.cursor/: hooks.json
.cursor/agents/: database-filler.md
.cursor/commands/: remove-all-worktrees.md
.cursor/hooks/: hook-handler.js  package-lock.json  package.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 7f893d01c5cf_add_persons_table_and_assigned_to_fk_on_.py  89fa68024953_add_person_table_and_assignment_to_todos.py  b38fb0519c83_initial_migration_with_todoitem.py
backend/app/: db.py  main.py  models.py  settings.py
backend/app/api/: router.py
backend/app/api/endpoints/: calculator.py  people.py  persons.py  ping.py  test_calculator.py  test_people.py  test_persons.py  test_todos.py  todos.py
frontend/: index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tools.json  vite.config.ts
frontend/src/: App.tsx  api_schema.d.ts  index.tsx
frontend/src/components/: Layout.tsx  PingDemo.tsx
frontend/src/pages/: CalculatorPage.module.css  CalculatorPage.tsx  Home.tsx  PeoplePage.module.css  PeoplePage.tsx  PingPage.tsx  TodoPage.module.css  TodoPage.tsx
prompts/: semantic_search_tool_desc.md
specifications/: assigned-to.md  claude-sessions.md
