[project]
name = "codingwithai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.mypy]
files = ["app"]
exclude = ["alembic"]
strict = true

[tool.ruff]
line-length = 120
src = ["app"]
exclude = ["alembic"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D103", "D104", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]  # Allow assert usage in test files
